kubernet/python/python_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: python
